--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+/* * {box-sizing: border-box;}; */
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
+
+
 body {
-    color: hsl(0, 0%, 100%);
-}  
+  margin: 0;
+  background-color: hsl(218, 28%, 13%);
+  color: hsl(0, 0%, 100%);
+}
+
+/* ================= Typography ================= */
+
+
+/* =================
+Layout
+================= */
+/* img {
+    background-color:  black;
+} */
