--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ body {
 
 /* ================= Typography ================= */
 
+h1,
+h2,
+h2,
+a {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  color:hsl(0, 0%, 100%);;
+}
+
 /* ================= Layout ================= */
 
 
@@ -30,6 +39,7 @@ header {
 
 img {
   max-width: 100%;
+  display: block;
 }
 
 nav {
@@ -49,7 +59,6 @@ nav li {
 }
 
 nav a {
-  font-family: 'Raleway', sans-serif;
   text-decoration: none;  
   color: #707070;
   font-weight: 700;
@@ -67,6 +76,15 @@ nav a:focus {
   margin: 20px auto;
   text-align: center;
 }
+
+.illustration-title, .illustration-body {
+ line-height: 1.5;
+}
+
+.illustration-body {
+  margin: 0em 3em;
+}
+
 
 /*  End of Header Section */
 
