--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 /* * {box-sizing: border-box;}; */
 
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");
 
 body {
   margin: 0;
   background-color: hsl(218, 28%, 13%);
   color: hsl(0, 0%, 100%);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* ================= Typography ================= */
@@ -19,11 +18,10 @@ h2,
 a {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  color:hsl(0, 0%, 100%);;
+  color: hsl(0, 0%, 100%);
 }
 
 /* ================= Layout ================= */
-
 
 /*  Start of Header Section */
 
@@ -46,7 +44,7 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 15px;
- }
+}
 
 nav ul {
   list-style: none;
@@ -59,10 +57,10 @@ nav li {
 }
 
 nav a {
-  text-decoration: none;  
+  text-decoration: none;
   color: #707070;
   font-weight: 700;
-  padding: .25em 0;
+  padding: 0.25em 0;
 }
 
 nav a:hover,
@@ -77,14 +75,35 @@ nav a:focus {
   text-align: center;
 }
 
-.illustration-title, .illustration-body {
- line-height: 1.5;
+.illustration-title,
+.illustration-body {
+  line-height: 1.5;
 }
 
 .illustration-body {
-  margin: 0em 3em;
+  margin: 0em 3em 1em;
 }
 
+.start-btn {
+  display: inline-block;
+  color: hsl(0, 0%, 100%);
+  padding: 18px 75px;
+  border-radius: 5em;
+  border: 0;
+  text-decoration: none;
+}
+
+.start-btn:hover {
+  color: #4fc6d7;
+  background: hsl(0, 0%, 100%);
+}
+
+.btn-accent {
+  background-image: linear-gradient(
+    to right,
+    hsl(176, 68%, 64%),
+    hsl(198, 60%, 50%)
+  );
+}
 
 /*  End of Header Section */
-
