--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,14 @@ nav a:focus {
 }
 
 /*  End of Header Section */
+
+
+/*  Start of Services Section */
+.services {
+  max-width: 100%;
+  width: 600px;
+  margin: 20px auto;
+  text-align: center;
+}
+/*  End of Services Section */
+
