--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,15 @@ nav a:focus {
 
 /*  End of Services Section */
 
+.information {
+  max-width: 100%;
+  width: 600px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+/* Start of Info Section * /
+
+
+
+/* End of Info Section * /
