Add info section.

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ nav a:focus {
 }
 
 
-/*  End of Services Section */
+/*  End of Information Section */
 
 .information {
   max-width: 100%;
@@ -146,4 +146,4 @@ nav a:focus {
 
 
 
-/* End of Info Section * /
+/* End of Information Section * /
