Start of Testeimonal Section.

--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,6 @@ nav a:focus {
   width: 400px;
 }
 /* End of Information Section * /
+
+<!-- Start of Testimonial Section-->
+<!-- End of Testimonial Section-->
