--- a/css/style.css
+++ b/css/style.css
@@ -169,5 +169,15 @@ nav a:focus {
   align-self: center;
 }
 
+.testimonial-card {
+  background-color: hsl(219, 30%, 18%);
+  border-radius: 5px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  flex: 1;
+  padding: 20px;
+  margin: 10px;
+  max-width: 400px;
+}
+
 
 /* End of Testimonial Section */
