--- a/css/style.css
+++ b/css/style.css
@@ -216,10 +216,41 @@ Start of Sign Up Section
 */
 .form-container {
   max-width: 100%;
+  margin: 0 auto -100px;
+  position: relative;
   width: 900px;
   background-color: hsl(217, 28%, 15%);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   padding: 40px;
-  margin: 0 auto 0;
+  z-index: 1;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.form-title {
+  margin: 0;
+}
+
+.form-body {
+  margin: 30px 0;
+  padding: 16px;
+}
+
+.form-control {
+  display: flex;
+}
+
+
+.form-control input {
+  flex: 1;
+  border-radius: 50px;
+  border: 0;
+  padding: 16px 60px;
+  margin-right: 20px;
+}
+
+.form-body {
+  /* padding: 10px */
 }
 
 /*
