--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ Start of Sign Up Section
 */
 .form-container {
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 auto -100px;
   margin-top: 80px;
   position: relative;
   width: 900px;
@@ -261,4 +261,62 @@ Start of Sign Up Section
 
 /*
 End of Sign Up Section
+*/
+
+/*
+Start of Footer Section
+*/
+footer { 
+  background-color: hsl(215,53%, 9%);
+  padding: 150px 0 50px;
+  display: flex;
+  justify-content: center;
+}
+footer .flex {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.footer-section {
+  flex: 1;
+  margin-top: 10px;
+}
+
+.footer-section p {
+  margin: 0;
+}
+
+.footer-section ul {
+  list-style-type: none;
+}
+
+.footer-section ul a {
+  color: #fff;
+  display: inline-block;
+  margin-bottom: 15px;
+  text-decoration: none;
+}
+
+.footer-section .social-icons {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+}
+
+.footer-section .social-icons a {
+  border: 1px solid #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  height: 40px;
+  width: 40px;
+}
+
+/*
+End of Footer Section
 */ 
+
+
