--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@ header {
 
 img {
   max-width: 100%;
-  /* display: block; */
 }
 
 nav {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 15px;
 }
@@ -88,11 +88,6 @@ nav a:focus {
   margin: 20px auto;
   text-align: center;
 }
-
-/* .illustration-title,
-.illustration-body {
-  line-height: 1.5;
-} */
 
 .illustration-body {
   margin: 0em 3em 2em;
@@ -136,10 +131,6 @@ nav a:focus {
   margin: 4em;
 }
 
-/* .service-body {
-  line-height: 1.4;
-} */
-
 /*  End of Information Section */
 .information-row {
   display: flex;
@@ -170,23 +161,34 @@ nav a:focus {
 
 .testimonials {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin: 40px auto;
 }
 
 .testimonial-card {
   background-color: hsl(219, 30%, 18%);
-  border-radius: 5px;
-  flex: 1;
+  border-radius: 5px; 
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   margin: 10px;
-  max-width: 400px;
+  width: 400px;
+  max-width: 100%;
 }
 
 .testimonial-user {
   display: flex;
   margin-top: 30px;
+}
+
+.testimonial-images-quotes {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  margin-right: 1210px;
+  z-index: -1;
+  position: absolute;
+  margin-top: -17px;
 }
 
 .testimonial-images {
@@ -211,9 +213,7 @@ nav a:focus {
 }
 /* End of Testimonial Section */
 
-/*
-Start of Sign Up Section
-*/
+/* Start of Sign Up Section */
 .form-container {
   max-width: 100%;
   margin: 0 auto -100px;
@@ -239,15 +239,15 @@ Start of Sign Up Section
 
 .form-control {
   display: flex;
+  flex-wrap: wrap;
 }
-
 
 .form-control input {
   flex: 1;
   border-radius: 50px;
   border: 0;
   padding: 16px 60px;
-  margin-right: 20px;
+  margin: 20px 20px 20px 0;
 }
 
 .started-btn {
@@ -257,37 +257,39 @@ Start of Sign Up Section
   border-radius: 5em;
   border: 0;
   text-decoration: none;
+  margin: 20px 20px 20px 0;
 }
 
-/*
-End of Sign Up Section
-*/
+/* End of Sign Up Section */
 
-/*
-Start of Footer Section
-*/
-footer { 
-  background-color: hsl(215,53%, 9%);
+/* Start of Footer Section */
+footer {
+  background-color: hsl(215, 53%, 9%);
   padding: 150px 0 50px;
   display: flex;
   justify-content: center;
 }
+
 footer .flex {
+  margin-bottom: 15px;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: center;
 }
 
 .footer-section {
   flex: 1;
   margin-top: 10px;
+  padding: 20px;
 }
 
 .footer-section p {
-  margin: 0;
+  margin: 0 0 0 10px;
 }
 
 .footer-section ul {
+  margin: 0px;
+  padding-left: 10px;
   list-style-type: none;
 }
 
@@ -300,7 +302,7 @@ footer .flex {
 
 .footer-section .social-icons {
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -315,8 +317,42 @@ footer .flex {
   width: 40px;
 }
 
-/*
-End of Footer Section
-*/ 
+/* End of Footer Section */
 
+@media screen and (max-width: 767px) {
+  .started-btn {
+    width: 100%;
+  }
 
+  .logo {
+    width: 85px;
+  }
+
+  header {
+    background-image: url("images/bg-curvey-desktop.svg");
+    padding-bottom: 0;
+  }
+
+  nav ul {
+    font-size: 12px;
+  }
+
+  .information-images {
+    margin: 0 auto;
+  }
+
+  .testimonial-images-quotes {
+    margin-right: 78%;
+    margin-top: -17px;
+  }
+
+  .form-control input{
+    text-align: center;
+    padding: 15px 20px;
+  }
+
+  .footer-section {
+    flex: auto;
+    width: 100%;
+  }
+}
